...

    Box(modifier = modifier) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier
                .clickable { expanded = true }
                .testTag("scanTypeDropDownList")) {
            Text(text = scanTypeValue)
            Icon(
                painter = if (!expanded) {
                    painterResource(id = R.drawable.ic_baseline_arrow_drop_down_24)
                } else {
                    painterResource(id = R.drawable.ic_baseline_arrow_drop_up_24)
...
